# eventpath

./: LICENSE  README.md  docker-compose.yml  package.json  pnpm-workspace.yaml
docs/: CUSTOM_EVENTS_GUIDE.md  DEVELOPER_EXPERIENCE.md  EVENT_FLOW_ARCHITECTURE.md
examples/: django-ecommerce-app.py  react-ecommerce-app.tsx
infra/db/: init.sql
infra/db/migrations/: 001_create_initial_schema.sql
infra/k8s/: ai-agent-deployment.yaml  api-deployment.yaml  web-deployment.yaml
services/ai-agent/: Dockerfile  README.md  pyproject.toml
services/ai-agent/ai_agent/: __init__.py  config.py  main.py
services/ai-agent/ai_agent/models/: anomaly_detector.py  funnel_explainer.py
services/ai-agent/ai_agent/routes/: explain.py  insights.py
services/ai-agent/tests/: test_explain.py
services/api/: README.md  package.json  tsconfig.json
services/api/src/: app.ts  config.ts  index.ts
services/api/src/db/: index.ts
services/api/src/routes/: analytics.ts  events.ts  workflows.ts
services/api/src/services/: aiClient.ts  eventService.ts  workflowService.ts
services/api/src/types/: events.ts
services/web/: Dockerfile  README.md  next.config.mjs  package.json
services/web/src/components/: EventTable.tsx  FunnelChart.tsx
services/web/src/lib/: apiClient.ts
services/web/src/pages/: index.tsx  insights.tsx  workflows.tsx
services/worker/: README.md  package.json
services/worker/src/: processEvents.ts
