[tool.poetry]
name = "ai-agent"
version = "1.0.0"
description = "AI-powered analytics insights microservice"
authors = ["4onstudios <contact@4onstudios.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
openai = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
